--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,19 @@ img {
     width: 100%;
 }
 
+.brand {
+    font-size: smaller;
+}
+
+.dress {
+    font-weight: bold;
+}
+
+.price {
+    font-weight: bold;
+    color: #eb0037;
+}
+
 /* labels */
 .label {
     position: absolute;
